samples/_failures_safe/1761327346_af405e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_03086892.c:155:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  155 | void parser_adv
      | ^~~~
